--- a/typescript/package.json
+++ b/typescript/package.json
@@ -5,6 +5,12 @@
     "start": "NODE_OPTIONS=--enable-source-maps npx tsc && node"
   },
   "devDependencies": {
+    "@types/node": "^20.8.6",
+    "@types/readline-sync": "^1.4.5",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "readline": "^1.3.0",
+    "readline-sync": "^1.4.10"
   }
 }
