--- a/typescript/package.json
+++ b/typescript/package.json
@@ -2,14 +2,15 @@
   "name": "typescript",
   "version": "1.0.0",
   "scripts": {
-    "start": "NODE_OPTIONS=--enable-source-maps npx tsc && node"
+    "start": "bun run",
+    "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/node": "^20.8.6",
     "@types/readline-sync": "^1.4.5",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/bun": "^1.0.8",
     "readline": "^1.3.0",
     "readline-sync": "^1.4.10"
   }
